--- a/app/views/programmes.html
+++ b/app/views/programmes.html
@@ -2,8 +2,8 @@
 
 {% set showBackLink = false %}
 
-{% set pageHeading = "Reporting funding progress" %}
-{% set pageSection = "" %}
+{% set pageHeading = "{Project Name}" %}
+{% set pageSection = "Project" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
       {{ macroPageHeader.pageHeader(pageHeading,pageSection) }}
 
       <ul class="govuk-list govuk-body-s">
-        <li>Last updated: <span class="govuk-!-font-weight-bold">3 May 2024</span></li>
+        <li>Last updated: <span class="govuk-!-font-weight-bold">1 May 2024</span></li>
         <li>Prototype version: {{releaseVersion}}</li>
       </ul>
 
