--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -21,6 +21,41 @@
             <!-- Register for an account -->
             {% set toFollowHtml %}                            
 
+            
+            <ul class="govuk-list govuk-list--bullet">
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/service-start" >Start page</a></li>                                            
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-in/" >Sign in</a></li>                                            
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/challenges/" >Programmes</a></li>                                            
+            </ul>  
+
+
+            <h3 class="govuk-heading-m">Project</h3>
+            <ul class="govuk-list govuk-list--bullet">
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/challenges/" >Overview</a></li>                            
+                <ul class="govuk-list govuk-list--bullet">                                
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/progress/" >Progress summary</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/communications/" >Upcoming communications</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/changes/" >Project changes</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/challenges/" >Project challenges</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/expenditure/" >Project expenditure</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/issues/" >Project issues</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/milestones/" >Project milestones</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/outcomes/" >Project outcomes</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/outputs/" >Project outputs</a></li>                            
+                    
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/rag/" >RAG rating</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/riba/" >RIBA reporting</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/risks/" >Issues and risks</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-off/" >Sign off and submit project report</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/support/" >Project support</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/users/" >Project users</a></li>                
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li><a class="govuk-link govuk-link--no-visited-state" href="/users/edit" >Edit a user</a></li>
+                    </ul>
+                </ul>                
+            </ul>  
+
+
             <h3 class="govuk-heading-m">Footer</h3>
             <ul class="govuk-list govuk-list--bullet">
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/help" >Help</a></li>
