--- a/app/views/challenges/index.html
+++ b/app/views/challenges/index.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set showBackLink = false %}
+{% set showBackLink = true %}
 
 {% set pageHeading = "Project challenges" %}
 {% set pageSection = "Project overview" %}
@@ -9,9 +9,50 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+	<div class="govuk-grid-column-two-thirds">
 
-      {{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
+    	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
+
+		<p>Add any challenges you have faced for your project Growing Community Green Spaces.</p>
+
+		
+		<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+			<li>include this</li>
+			<li>Also include this</li>
+			<li>And lastly, you should include this</li>
+		</ul>
+
+		<form method="post" action="" >
+		
+			{{ govukRadios({
+				classes: "govuk-radios--inline",
+				name: "projectChallenges",
+				id: "projectChallenges",				
+				fieldset: {
+				  legend: {
+					text: "Do you need to add any project challenges?",
+					isPageHeading: false,
+					classes: "govuk-fieldset__legend--m"
+					}
+				},				
+				items: [
+				  { value: "yes", text: "Yes" },
+				  { value: "no", text: "No" }
+				]
+			  }) }}
+
+
+			<div class="govuk-button-group">
+				{{ govukButton({
+				  text: "Save"
+				}) }}
+
+				{{ govukButton({
+				  text: "Save as draft",
+				  classes: "govuk-button--secondary"
+				}) }}
+		  </div>
+
 
   </div>
 </div>
