--- a/app/views/milestones/index.html
+++ b/app/views/milestones/index.html
@@ -1,17 +1,63 @@
 {% extends "layouts/main.html" %}
 
-{% set showBackLink = false %}
+{% set showBackLink = true %}
 
-{% set pageHeading = "Delivery plan" %}
-{% set pageSection = "Project milestones" %}
+{% set pageHeading = "Project milestones" %}
+{% set pageSection = "Delivery plan" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+	<div class="govuk-grid-column-two-thirds">
 
-      {{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
+    	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
+
+      	<p>For each milestone, add details about:</p>
+      	<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+        	<li>the status of the milestone</li>
+        	<li>completed and expected completion dates</li>
+        	<li>how the milestone has been progressing, for example, any recent successes</li>
+      	</ul>
+
+        <form method="post" action="" >   
+        
+		{% set milestoneOneHtml %}   
+              
+
+        {% endset -%} 
+
+		{% set milestoneTwoHtml %}           
+
+        {% endset -%} 
+
+		{% set milestoneThreeHtml %}   
+
+
+        {% endset -%} 
+
+        {{ govukTabs({
+          items: [           
+              { label: "Milestone 1", id: "milestoneOne", panel: { html: milestoneOneHtml } },
+              { label: "Milestone 2", id: "milestoneTwo", panel: { html: milestoneTwoHtml } },
+              { label: "Milestone 3", id: "milestoneThree", panel: { html: milestoneThreeHtml } }
+          ]
+      }) }}
+
+
+
+      <div class="govuk-button-group">
+        {{ govukButton({
+          text: "Save"
+        }) }}
+
+        {{ govukButton({
+          text: "Save as draft",
+          classes: "govuk-button--secondary"
+        }) }}
+    </div>
+
+  </form>
 
   </div>
 </div>
