--- a/app/views/outcomes/index.html
+++ b/app/views/outcomes/index.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set showBackLink = false %}
+{% set showBackLink = true %}
 
 {% set pageHeading = "Project outcomes" %}
 {% set pageSection = "Outcomes" %}
@@ -9,9 +9,69 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+	<div class="govuk-grid-column-two-thirds">
 
-      {{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
+		{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
+
+
+		<p>Add the outcomes for the project <span class="govuk-!-font-weight-bold">Growing Community Green Spaces</span>. This allows us to:</p>
+		<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+			<li>keep track of the outcomes you are delivering on</li>
+			<li>understand project objectives in more detail</li>
+			<li>see the impact the outcomes are having on the project</li>
+		</ul>
+
+		
+		{{ govukButton({
+			text: "Download previous data",
+			classes: "govuk-button--secondary"
+		  }) }}
+		{{ govukDetails({
+			summaryText: "Downloading this data",
+			text: "To follow"
+		}) }}
+
+
+		<form method="post" action="" >   
+        
+			{% set milestoneOneHtml %}   
+				  
+	
+			{% endset -%} 
+	
+			{% set milestoneTwoHtml %}           
+	
+			{% endset -%} 
+	
+			{% set milestoneThreeHtml %}   
+	
+	
+			{% endset -%} 
+	
+			{{ govukTabs({
+			  items: [           
+				  { label: "Outcome 1", id: "OutcomeOne", panel: { html: OutcomeOneHtml } },
+				  { label: "Outcome 2", id: "OutcomeTwo", panel: { html: OutcomeTwoHtml } },
+				  { label: "Outcome 3", id: "OutcomeThree", panel: { html: OutcomeThreeHtml } }
+			  ]
+		  }) }}
+	
+	
+	
+		  <div class="govuk-button-group">
+			{{ govukButton({
+			  text: "Save"
+			}) }}
+	
+			{{ govukButton({
+			  text: "Save as draft",
+			  classes: "govuk-button--secondary"
+			}) }}
+		</div>
+	
+	  </form>
+
+
 
   </div>
 </div>
