--- a/app/views/sign-off/index.html
+++ b/app/views/sign-off/index.html
@@ -13,6 +13,80 @@
 
       {{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 
+
+      <p>Add any challenges you have faced for your project Growing Community Green Spaces.</p>
+
+		
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+        <li>all of the information is accurate and up to date</li>
+        <li>issues affecting delivery have been reported on</li>
+        <li>the report has been reviewed by all relevant stakeholders - you can download the full report before submitting if needed</li>
+      </ul>
+
+      <h2 class="govuk-heading-m">Who is submitting this report</h2>
+      <p>There may be several people contributing to this report. Please select the name of the person who is submitting this report.</p>
+
+
+      <form method="post" action="" >
+			
+
+        {{ govukSelect({
+          id: "location",
+          name: "location",
+          label: {
+            text: "Select an option to update your RIBA reporting stage",
+            classes: "govuk-visually-hidden"
+          },		
+          classes: "govuk-!-width-two-thirds",
+          items: [
+            {
+            value: "choose",
+            text: "Select a name",
+            selected: true
+            }
+          
+          ]
+          }) }}
+
+
+
+  
+  {{ govukCheckboxes({
+  name: "organisation",
+  classes: "govuk-checkboxes--small",
+  fieldset: {
+    legend: {
+      text: "Organisation",
+      isPageHeading: true,
+      classes: "govuk-visually-hidden"
+    }
+  },
+  items: [
+    {
+      value: "hmrc",
+      text: "I confirm a Section 151 Officer has signed off this report"
+    },
+    {
+      value: "employment-tribunal",
+      text: "I confirm I want to sign off this project and submit the report"
+    }
+    
+  ]
+}) }}
+        
+  
+  
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Confirm and submit this report"
+          }) }}
+  
+          <a class="govuk-link">Cancel</a>
+        </div>
+
+
+
+
   </div>
 </div>
 
