further baseline build

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -31,7 +31,7 @@
 
             <h3 class="govuk-heading-m">Project</h3>
             <ul class="govuk-list govuk-list--bullet">
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/challenges/" >Overview</a></li>                            
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/" >Overview</a></li>                            
                 <ul class="govuk-list govuk-list--bullet">                                
                     <li><a class="govuk-link govuk-link--no-visited-state" href="/progress/" >Progress summary</a></li>                            
                     <li><a class="govuk-link govuk-link--no-visited-state" href="/communications/" >Upcoming communications</a></li>                            
