update to listings

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -12,7 +12,7 @@
 
         {{ macroPageHeader.pageHeader(pageHeading,pageSection) }} 
 
-        <p class="govuk-body-s">Last updated 3 May 2024</p>
+        <p class="govuk-body-s">Last updated 7 May 2024</p>
         <p class="govuk-body govuk-!-margin-bottom-7">Some pages have dynamic content, so if using the links and not navigating through the service flows that lead to each page, its not always possible to show the right content for all scenarios.</p>
 
     </div>
@@ -33,22 +33,31 @@
             <ul class="govuk-list govuk-list--bullet">
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/project/" >Overview</a></li>                            
                 <ul class="govuk-list govuk-list--bullet">                                
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/progress/" >Progress summary</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/communications/" >Upcoming communications</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/changes/" >Project changes</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/challenges/" >Project challenges</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/expenditure/" >Project expenditure</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/issues/" >Project issues</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/milestones/" >Project milestones</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/outcomes/" >Project outcomes</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/outputs/" >Project outputs</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/progress-summary" >Progress summary</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/communications" >Upcoming communications</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/rag" >RAG rating</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/challenges" >Project challenges</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/overview/riba" >RIBA reporting</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/delivery-plan/milestones/" >Project milestones</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/issues" >Project issues</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/issues-risks/risks" >Issues and risks</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/expenditure/" >Project expenditure</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/outputs/" >Project outputs</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/outcomes/" >Project outcomes</a></li>                                                
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/changes/" >Project changes</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off-and-submission/" >Sign off and submit project report</a></li>                            
                     
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/rag/" >RAG rating</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/riba/" >RIBA reporting</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/risks/" >Issues and risks</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-off/" >Sign off and submit project report</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/support/" >Project support</a></li>                            
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/users/" >Project users</a></li>                
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/support/" >Project support</a></li>                            
+                    <li><a class="govuk-link govuk-link--no-visited-state" href="/project/users/" >Project users</a></li>                
                     <ul class="govuk-list govuk-list--bullet">
                         <li><a class="govuk-link govuk-link--no-visited-state" href="/users/edit" >Edit a user</a></li>
                     </ul>
