--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,6 +18,12 @@
         <li>Prototype version: {{releaseVersion}}</li>
       </ul>
 
+      <h2 class="govuk-heading-m">Temporary links</h2>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="/listings">Page listings ( in flux as they are built )</a></li>
+        <li><a href="/data">Session data</a></li>
+      </ul>
+
   </div>
 </div>
 
