--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -24,8 +24,8 @@
             
             <ul class="govuk-list govuk-list--bullet">
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/service-start" >Start page</a></li>                                            
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-in/" >Sign in</a></li>                                            
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/challenges/" >Programmes</a></li>                                            
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-in" >Sign in</a></li>                                            
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/programmes" >Programmes</a></li>                                            
             </ul>  
 
 
