--- a/app/views/service-start.html
+++ b/app/views/service-start.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = false %}
 
-{% set pageHeading = "Programmes" %}
+{% set pageHeading = "Service start page" %}
 {% set pageSection = "" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
