--- a/app/views/sign-in copy.html
+++ b/app/views/sign-in copy.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = false %}
 
-{% set pageHeading = "Programmes" %}
+{% set pageHeading = "Sign in" %}
 {% set pageSection = "" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
