report box include

--- a/app/views/project/index.html
+++ b/app/views/project/index.html
@@ -28,6 +28,11 @@
 		{% include "includes/task-sign-off.html" %}
 
   </div>
+  <div class="govuk-grid-column-one-third">
+
+	{% include "includes/reportBox.html "%}
+
+  </div>
 </div>
 
 {% endblock %}
