--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -10,3 +10,20 @@
     border: 0;
     padding-left: 0;
 }
+
+
+.dluhc-ticket-panel {
+    display: block;
+    margin-right: 0;
+    flex-wrap: wrap;
+}
+
+
+.dluhc-ticket-panel__content {
+    display: block;
+    position: relative;
+    background-color: #f3f2f1;
+    padding: 20px;        
+    flex-grow: 1;
+    border-top: 6px solid #1d70b8;
+}
