reporting period box

--- a/app/views/includes/reportBox.html
+++ b/app/views/includes/reportBox.html
@@ -4,11 +4,11 @@
         <p class="govuk-body">Reporting period:
         <br>July 2023 to September 2023</p>
             
-        <hr class="govuk-section-break--m govuk-section-break--visible">
+        <hr class="govuk-section-break--m">
         <p class="govuk-body govuk-!-font-size-16 govuk-!-font-weight-bold">Report due by 16th February 2024</p>
         <p class="govuk-body govuk-!-font-size-16">Last updated on 16th February 2024<br>by Alex Smith</p>
             
-        <hr class="govuk-section-break--m govuk-section-break--visible">
+        <hr class="govuk-section-break--m">
             
         {{ govukButton({
             text: "Download PDF"                
