--- a/app/views/project/delivery-plan/milestones.html
+++ b/app/views/project/delivery-plan/milestones.html
@@ -60,6 +60,11 @@
   </form>
 
   </div>
+  <div class="govuk-grid-column-one-third">
+
+		{% include "includes/reportPeriod.html "%}
+	
+	  </div>
 </div>
 
 {% endblock %}
