--- a/app/views/project/outputs/index.html
+++ b/app/views/project/outputs/index.html
@@ -77,6 +77,11 @@
 
 
   	</div>
+	  <div class="govuk-grid-column-one-third">
+
+		{% include "includes/reportPeriod.html "%}
+	
+	  </div>
 </div>
 
 {% endblock %}
