--- a/app/views/project/changes/index.html
+++ b/app/views/project/changes/index.html
@@ -53,6 +53,11 @@
 		</form>
 
   </div>
+  <div class="govuk-grid-column-one-third">
+
+	{% include "includes/reportPeriod.html "%}
+
+  </div>
 </div>
 
 {% endblock %}
