--- a/app/views/project/expenditure/index.html
+++ b/app/views/project/expenditure/index.html
@@ -73,6 +73,11 @@
 
 
   	</div>
+	  <div class="govuk-grid-column-one-third">
+
+		{% include "includes/reportPeriod.html "%}
+	
+	  </div>
 </div>
 
 {% endblock %}
