--- a/app/views/project/issues-risks/issues.html
+++ b/app/views/project/issues-risks/issues.html
@@ -56,6 +56,11 @@
 
 
   	</div>
+	  <div class="govuk-grid-column-one-third">
+
+		{% include "includes/reportPeriod.html "%}
+	
+	  </div>
 </div>
 
 {% endblock %}
