--- a/app/views/project/outcomes/index.html
+++ b/app/views/project/outcomes/index.html
@@ -74,6 +74,11 @@
 
 
   </div>
+  <div class="govuk-grid-column-one-third">
+
+	{% include "includes/reportPeriod.html "%}
+
+  </div>
 </div>
 
 {% endblock %}
