--- a/app/views/project/overview/challenges.html
+++ b/app/views/project/overview/challenges.html
@@ -55,6 +55,11 @@
 
 
   </div>
+  <div class="govuk-grid-column-one-third">
+
+	{% include "includes/reportPeriod.html "%}
+
+  </div>
 </div>
 
 {% endblock %}
