--- a/app/views/project/overview/rag-status.html
+++ b/app/views/project/overview/rag-status.html
@@ -68,6 +68,11 @@
 
 
   </div>
+  <div class="govuk-grid-column-one-third">
+
+	{% include "includes/reportPeriod.html "%}
+
+  </div>
 </div>
 
 {% endblock %}
