--- a/app/views/project/overview/riba.html
+++ b/app/views/project/overview/riba.html
@@ -62,6 +62,11 @@
 
 
   	</div>
+	  <div class="govuk-grid-column-one-third">
+
+		{% include "includes/reportPeriod.html "%}
+	
+	  </div>
 </div>
 
 {% endblock %}
