--- a/app/views/project/sign-off-and-submission/index.html
+++ b/app/views/project/sign-off-and-submission/index.html
@@ -88,6 +88,11 @@
 
 
   </div>
+  <div class="govuk-grid-column-one-third">
+
+		{% include "includes/reportPeriod.html "%}
+	
+	  </div>
 </div>
 
 {% endblock %}
