initial task list logic

--- a/app/views/includes/task-sign-off.html
+++ b/app/views/includes/task-sign-off.html
@@ -1,7 +1,20 @@
 <h2 class="govuk-heading-m">Sign off and submission</h2>
-{{ govukTaskList({
-	idPrefix: "company-details",
-	items: [
-		{ title: { text: "Sign off and submit project report" }, href: "/project/sign-off-and-submission/", status: { text: "Completed" } }
-	]
-}) }}
+<ul class="govuk-task-list">
+	<li class="govuk-task-list__item govuk-task-list__item--with-link">
+		<div class="govuk-task-list__name-and-hint">
+			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/sign-off-and-submission/" aria-describedby="report-details-7-status">Sign off and submit project report</a>
+	  	</div>
+	  	<div class="govuk-task-list__status" id="report-details-13-status">			
+			{% if data['report-13-status'] == "Completed" %}
+				Completed
+			{% elif data['report-13-status'] == "inProgress" %}
+				<strong class="govuk-tag govuk-tag--light-blue">In progress</strong>
+			{% else %}
+				<strong class="govuk-tag govuk-tag--blue">Not yet started</strong>
+			{% endif %}
+		</div>
+	</li>	
+  </ul>
+
+
+  
