--- a/app/views/project/sign-off-and-submission/index.html
+++ b/app/views/project/sign-off-and-submission/index.html
@@ -27,7 +27,7 @@
       <p>There may be several people contributing to this report. Please select the name of the person who is submitting this report.</p>
 
 
-      <form method="post" action="" >
+      <form method="post" action="/project/?report-13-status=Completed" >	  
 			
 
         {{ govukSelect({
