--- a/app/views/includes/reportBox.html
+++ b/app/views/includes/reportBox.html
@@ -2,7 +2,7 @@
     <section class="dluhc-ticket-panel__content" aria-label="Section 1">
 
         <p class="govuk-body">Reporting period:
-        <br>July 2023 to September 2023</p>
+        <br>{{ data.reportPeriod }}</p>
             
         <hr class="govuk-section-break--m">
         <p class="govuk-body govuk-!-font-size-16 govuk-!-font-weight-bold">Report due by 16th February 2024</p>
