--- a/app/views/includes/reportPeriod.html
+++ b/app/views/includes/reportPeriod.html
@@ -1,11 +1,11 @@
 <article class="dluhc-ticket-panel" aria-label="Sub navigation 1">                            
     <section class="dluhc-ticket-panel__content" aria-label="Section 1">
 
-        <p class="govuk-body"><span class="govuk-!-font-weight-bold">Project:</span> Growing Community Green Spaces</p>
+        <p class="govuk-body"><span class="govuk-!-font-weight-bold">Project:</span> {{ data.projectName }}</p>
                 
         <hr class="govuk-section-break--m">
         
-        <p class="govuk-body"><span class="govuk-!-font-weight-bold">Reporting period:</span> July 2023 to September 2023</p>
+        <p class="govuk-body"><span class="govuk-!-font-weight-bold">Reporting period:</span> {{ data.reportPeriod }}</p>
             
 
         
