--- a/app/views/includes/task-issues-and-risks.html
+++ b/app/views/includes/task-issues-and-risks.html
@@ -1,8 +1,32 @@
 <h2 class="govuk-heading-m">Issues and risks</h2>
-{{ govukTaskList({
-	idPrefix: "company-details",
-	items: [
-		{ title: { text: "Issues" }, href: "/project/issues-risks/issues", status: { text: "Completed" } },
-		{ title: { text: "Risks" }, href: "/project/issues-risks/risks", status: { text: "Completed" } }
-	]
-}) }}
+<ul class="govuk-task-list">
+	<li class="govuk-task-list__item govuk-task-list__item--with-link">
+		<div class="govuk-task-list__name-and-hint">
+			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/issues-risks/issues" aria-describedby="report-details-7-status">Issues</a>
+	  	</div>
+	  	<div class="govuk-task-list__status" id="report-details-7-status">			
+			{% if data['report-7-status'] == "Completed" %}
+				Completed
+			{% elif data['report-7-status'] == "inProgress" %}
+				<strong class="govuk-tag govuk-tag--light-blue">In progress</strong>
+			{% else %}
+				<strong class="govuk-tag govuk-tag--blue">Not yet started</strong>
+			{% endif %}
+		</div>
+	</li>	
+
+	<li class="govuk-task-list__item govuk-task-list__item--with-link">
+		<div class="govuk-task-list__name-and-hint">
+			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/issues-risks/risks" aria-describedby="report-details-7-status">Risks</a>
+	  	</div>
+	  	<div class="govuk-task-list__status" id="report-details-8-status">			
+			{% if data['report-8-status'] == "Completed" %}
+				Completed
+			{% elif data['report-8-status'] == "inProgress" %}
+				<strong class="govuk-tag govuk-tag--light-blue">In progress</strong>
+			{% else %}
+				<strong class="govuk-tag govuk-tag--blue">Not yet started</strong>
+			{% endif %}
+		</div>
+	</li>	
+  </ul>
