--- a/app/views/includes/task-outcomes.html
+++ b/app/views/includes/task-outcomes.html
@@ -1,7 +1,17 @@
 <h2 class="govuk-heading-m">Outcomes</h2>
-{{ govukTaskList({
-	idPrefix: "company-details",
-	items: [
-		{ title: { text: "Project outcomes" }, href: "/project/outcomes/", status: { text: "Completed" } }
-	]
-}) }}
+<ul class="govuk-task-list">
+	<li class="govuk-task-list__item govuk-task-list__item--with-link">
+		<div class="govuk-task-list__name-and-hint">
+			<a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="/project/outcomes/" aria-describedby="report-details-7-status">Project outcomes</a>
+	  	</div>
+	  	<div class="govuk-task-list__status" id="report-details-11-status">			
+			{% if data['report-11-status'] == "Completed" %}
+				Completed
+			{% elif data['report-11-status'] == "inProgress" %}
+				<strong class="govuk-tag govuk-tag--light-blue">In progress</strong>
+			{% else %}
+				<strong class="govuk-tag govuk-tag--blue">Not yet started</strong>
+			{% endif %}
+		</div>
+	</li>	
+  </ul>
