--- a/app/views/project/delivery-plan/milestones.html
+++ b/app/views/project/delivery-plan/milestones.html
@@ -20,7 +20,7 @@
         	<li>how the milestone has been progressing, for example, any recent successes</li>
       	</ul>
 
-        <form method="post" action="" >   
+        <form method="post" action="/project/?report-6-status=Completed" >	   
         
 		{% set milestoneOneHtml %}   
               
@@ -53,7 +53,8 @@
 
         {{ govukButton({
           text: "Save as draft",
-          classes: "govuk-button--secondary"
+          classes: "govuk-button--secondary",
+          href: "/project/?report-6-status=inProgress"
         }) }}
     </div>
 
