--- a/app/views/project/expenditure/index.html
+++ b/app/views/project/expenditure/index.html
@@ -36,7 +36,7 @@
 		<h2 class="govuk-heading-m">Upload your spreadsheet</h2>
 
 
-		<form method="post" action="" >
+		<form method="post" action="/project/?report-9-status=Completed" >	  
 
 		{{ govukFileUpload({
 			id: "file-upload-1",
@@ -58,7 +58,8 @@
 
 				{{ govukButton({
 				  text: "Save as draft",
-				  classes: "govuk-button--secondary"
+				  classes: "govuk-button--secondary",
+				  href: "/project/?report-9-status=inProgress"
 				}) }}
 		  </div>
 
