--- a/app/views/project/issues-risks/risks.html
+++ b/app/views/project/issues-risks/risks.html
@@ -22,7 +22,7 @@
 			<li>learn from previous issues</li>
 		</ul>
 
-		<form method="post" action="" >
+		<form method="post" action="/project/?report-8-status=Completed" >	  
 		
 			{{ govukRadios({				
 				name: "projecRisks",
@@ -48,7 +48,8 @@
 
 				{{ govukButton({
 				  text: "Save as draft",
-				  classes: "govuk-button--secondary"
+				  classes: "govuk-button--secondary",
+				  href: "/project/?report-8-status=inProgress"
 				}) }}
 		  </div>
 
