--- a/app/views/project/outcomes/index.html
+++ b/app/views/project/outcomes/index.html
@@ -32,7 +32,7 @@
 		}) }}
 
 
-		<form method="post" action="" >   
+		<form method="post" action="/project/?report-11-status=Completed" >	  
         
 			{% set milestoneOneHtml %}   
 				  
@@ -65,7 +65,8 @@
 	
 			{{ govukButton({
 			  text: "Save as draft",
-			  classes: "govuk-button--secondary"
+			  classes: "govuk-button--secondary",
+			  href: "/project/?report-11-status=inProgress"
 			}) }}
 		</div>
 	
