--- a/app/views/project/outputs/index.html
+++ b/app/views/project/outputs/index.html
@@ -35,7 +35,7 @@
 		}) }}
 
 
-		<form method="post" action="" >   
+		<form method="post" action="/project/?report-10-status=Completed" >	  
         
 			{% set milestoneOneHtml %}   
 				  
@@ -68,7 +68,8 @@
 	
 			{{ govukButton({
 			  text: "Save as draft",
-			  classes: "govuk-button--secondary"
+			  classes: "govuk-button--secondary",
+			  href: "/project/?report-10-status=inProgress"
 			}) }}
 		</div>
 	
