--- a/app/views/project/overview/rag-status.html
+++ b/app/views/project/overview/rag-status.html
@@ -23,7 +23,7 @@
 	</div>
 	<div class="govuk-grid-column-full">
 		
-		<form method="post" action="" >	  
+		<form method="post" action="/project/?report-3-status=Completed" >	  
 
 			{% set tabOneHtml %}   
 			
@@ -58,7 +58,8 @@
 
 				{{ govukButton({
 				text: "Save as draft",
-				classes: "govuk-button--secondary"
+				classes: "govuk-button--secondary",
+				href: "/project/?report-3-status=inProgress" 
 				}) }}
 			
 			</div>
