--- a/app/views/project/overview/riba.html
+++ b/app/views/project/overview/riba.html
@@ -22,7 +22,7 @@
 		  }) }}
 		
 
-		<form method="post" action="" >
+		  <form method="post" action="/project/?report-5-status=Completed" >
 			
 
 			{{ govukSelect({
@@ -54,7 +54,8 @@
 
 				{{ govukButton({
 				  text: "Save as draft",
-				  classes: "govuk-button--secondary"
+				  classes: "govuk-button--secondary",
+				  href: "/project/?report-5-status=inProgress"
 				}) }}
 		  </div>
 
