--- a/app/views/project/index.html
+++ b/app/views/project/index.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "{Project Name}" %}
+{% set pageHeading = ' ' + data.projectName + ' ' %}
 {% set pageSection = "Project overview" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
