--- a/app/views/project/index.html
+++ b/app/views/project/index.html
@@ -1,6 +1,8 @@
 {% extends "layouts/main.html" %}
 
-{% set showBackLink = true %}
+{% set showBackLink = false %}
+{% set showBread = true %}
+{% set showNav = true %}
 
 {% set pageHeading = ' ' + data.projectName + ' ' %}
 {% set pageSection = "Project overview" %}
