--- a/app/views/project/overview/communications/communications.html
+++ b/app/views/project/overview/communications/communications.html
@@ -48,8 +48,7 @@
 
 				{{ govukButton({
 				  text: "Save as draft",
-				  classes: "govuk-button--secondary",
-				  href: "/project/?report-2-status=inProgress"
+				  classes: "govuk-button--secondary"
 				}) }}
 		  </div>
 
